# respeaker-openai-assistant

./: .gitignore  PROJECT_SUMMARY.md  README.md  REALTIME_API_NOTES.md  SETUP.md  pyproject.toml  test_oww_official_style.py  voice-assistant.service
config/: config.yaml.example
resources/: README.md
scripts/: download_models.py  verify_setup.py
src/voice_assistant/: __init__.py  __main__.py  audio_handler.py  cli.py  config.py  hotword_detector.py  main.py  openai_client.py  simple_record.py  state_machine.py  test_mode.py
src/voice_assistant/commands/: __init__.py  download_models.py  list_audio_devices.py  run.py  show_config.py  simple_record.py  test_audio.py  test_events.py  test_hotword_native.py  test_led.py  test_mode.py  test_realtime.py  test_stt.py  verify.py
src/voice_assistant/consumers/: __init__.py  realtime_consumer.py  stt_consumer.py
src/voice_assistant/consumers/led/: __init__.py  apa102_driver.py  led_consumer.py  led_pattern.py
src/voice_assistant/core/: __init__.py  audio_handler.py  detection_service.py  event_bus.py  hotword_detector.py  speaker_service.py
src/voice_assistant/services/: __init__.py  openai_client.py  state_machine.py
