[project]
name = "voice-assistant"
version = "0.1.0"
description = "ReSpeaker 4-Mic Array Voice Assistant with OpenAI Realtime API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "openai>=2.14.0",
    "openwakeword>=0.6.0",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
    "scipy>=1.13.1",
    "setuptools>=80.9.0",
    "soxr>=1.0.0",
    "webrtcvad>=2.0.10",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
voice-assistant = "voice_assistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
